<resources>
    <string name="app_name">My Delivery</string>
    <string name="title_activity_dashboard">Dashboard</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="telaDashboard_cliente">Clientes</string>
    <string name="telaListaCliente_SearchClientes">Busca clientes</string>
    <string name="telaDashboard_Entrega">Entregas</string>
    <string name="telaDashboard_Venda">Vendas</string>

    <!-- DIALOG NOVO CLIENTE -->
    <string name="dialogCliente_nomecliente">Nome</string>
    <string name="dialogCliente_cpfcliente">CPF/CNPJ</string>
    <string name="dialogCliente_rgIEcliente">RG/I.E</string>
    <string name="dialogCliente_Email">E-mail</string>
    <string name="dialogCliente_Telefone">Telefone</string>
    <string name="dialogCliente_Celular">Celular</string>
    <string name="dialogCliente_Cidade">Cidade</string>
    <string name="dialogCliente_Principal">Principal</string>
    <string name="dialogCliente_CEP">CEP</string>
    <string name="dialogCliente_Endereco">Endereço</string>
    <string name="dialogCliente_NumeroEndereco">Nº</string>
    <string name="dialogCliente_Bairro">Bairro</string>
    <string name="dialogCliente_BtnSalvar">Salvar</string>
    <string name="dialogCliente_BtnCancelar">Cancelar</string>
    <string name="dialogCliente_BtnCEP">BUSCAR CEP</string>
</resources>